--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
-language: node
+language: node_js
+node_js:
+- node
+cache:
+  directories:
+    - api/node_modules
+    - app/node_modules
+script: 
+    - npm install -g serverless
+    - sls deploy
