--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,57 @@
-language: node_js
-node_js:
-- node
+before_script:
+  - npm install -g serverless
+  - echo "Executed pre scripts"
+  
+
 cache:
   directories:
-    - api/node_modules
-    - app/node_modules
-script: 
-    - npm install -g serverless
-    - sls deploy
+    - ~/api/node_modules
+    - ~/app/node_modules
     
+jobs:
+  include:
+    - stage: build_api
+      language: node_js
+      node_js: "8.10"
+      cache:
+        directories:
+          - "node_modules"
+        yarn: true
+      install:
+      - mkdir ~/mycache
+      - echo "$TRAVIS_BUILD_ID"
+      - echo "$TRAVIS_BUILD_ID" > ~/mycache/travis_build_id
+      - echo "build stuff" > ~/mycache/artifact.bin
+      script:
+        - pwd
+      
+      branches:
+        only:
+        - ci-config
+        - dev
+        - master      
+        
+      script: echo "second job"
+      
+    - stage: deploy_app
+      language: python
+      python: 2.7
+      before_install:
+        - | 
+            sudo apt-get update
+            
+      install:
+      - if test "$TRAVIS_BUILD_ID" != `cat ~/mycache/travis_build_id`; then travis_terminate 1; fi
+      - rm -f ~/mycache/travis_build_id
+      - echo "Do something with ~/mycache/artifact.bin, e.g. publish it to gh-pages"
+      - mv ~/mycache ~/mycache-discard
+      - mkdir ~/mycache # clear the cache
+      branches:
+        only:
+        - dev
+        - ci-config
+        - master
+        
+      script: 
+        - |
+            echo "Deploying the app to server"
