Execute frontend and backend deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ jobs:
       - echo "build stuff" > ~/mycache/artifact.bin
       script:
         - pwd
+        - cd ~/devops/frontend && serverless deploy
+        - cd ~/devops/backend && serverless deploy
       
       branches:
         only:
@@ -31,27 +33,27 @@ jobs:
         - dev
         - master      
         
-      script: echo "second job"
+#       script: echo "second job"
       
-    - stage: deploy_app
-      language: python
-      python: 2.7
-      before_install:
-        - | 
-            sudo apt-get update
+#     - stage: deploy_app
+#       language: python
+#       python: 2.7
+#       before_install:
+#         - | 
+#             sudo apt-get update
             
-      install:
-      - if test "$TRAVIS_BUILD_ID" != `cat ~/mycache/travis_build_id`; then travis_terminate 1; fi
-      - rm -f ~/mycache/travis_build_id
-      - echo "Do something with ~/mycache/artifact.bin, e.g. publish it to gh-pages"
-      - mv ~/mycache ~/mycache-discard
-      - mkdir ~/mycache # clear the cache
-      branches:
-        only:
-        - dev
-        - ci-config
-        - master
+#       install:
+#       - if test "$TRAVIS_BUILD_ID" != `cat ~/mycache/travis_build_id`; then travis_terminate 1; fi
+#       - rm -f ~/mycache/travis_build_id
+#       - echo "Do something with ~/mycache/artifact.bin, e.g. publish it to gh-pages"
+#       - mv ~/mycache ~/mycache-discard
+#       - mkdir ~/mycache # clear the cache
+#       branches:
+#         only:
+#         - dev
+#         - ci-config
+#         - master
         
-      script: 
-        - |
-            echo "Deploying the app to server"
+#       script: 
+#         - |
+#             echo "Deploying the app to server"
