--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 before_script:
   - npm install -g serverless
+  - npm install -g serverless-single-page-app-plugin
   - echo "Executed pre scripts"
   
 
