--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,12 @@ jobs:
       - echo "$TRAVIS_BUILD_ID"
       - echo "$TRAVIS_BUILD_ID" > ~/mycache/travis_build_id
       - echo "build stuff" > ~/mycache/artifact.bin
-      script:
-        - pwd
-        - cd devops/frontend && serverless deploy
-        - cd devops/backend && serverless deploy
+      script: |
+                pwd
+                cd devops/frontend 
+                npm install -g serverless-single-page-app-plugin
+                serverless deploy
+                cd devops/backend && serverless deploy
       
       branches:
         only:
