--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ jobs:
       - echo "build stuff" > ~/mycache/artifact.bin
       script: |
                 pwd
-                cd devops/frontend 
-                npm install -g serverless-single-page-app-plugin
+                cd devops/frontend
                 serverless deploy
-                cd devops/backend && serverless deploy
+                cd ../backend
+                serverless deploy
       
       branches:
         only:
