--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
                 npm install
                 serverless deploy
                 cd ../backend
+                npm install serverless-package-external
                 serverless deploy
       
       branches:
