--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ jobs:
                 npm install
                 serverless deploy
                 cd ../backend
-                npm install serverless-package-external serverless-http
+                npm install serverless-package-external 
+                npm install serverless-http
                 serverless deploy
       
       branches:
