--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
                 cd ../devops/frontend
                 npm install
                 serverless deploy
+                serverless syncToS3
                 cd ../backend
                 npm install serverless-package-external 
                 npm install serverless-http
