Add matrix before job

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,11 @@ cache:
   directories:
     - ~/api/node_modules
     - ~/app/node_modules
-    
+
+matrix:
+  - node_js=8.10
+  - node_js=8.10
+
 jobs:
   include:
     - stage: build
@@ -83,11 +87,3 @@ jobs:
         
 after_success:
   - aws s3 sync ~/$TRAVIS_BUILD_NUMBER s3://lf-travis-shared-storage/$TRAVIS_BUILD_NUMBER
-
-env:
-  global:
-    - MY_GLOBAL_VAR=123
-    - CI_NODE_TOTAL=2
-  matrix:
-    - CI_NODE_INDEX=0
-    - CI_NODE_INDEX=1
