Zip artifact in ~/$TRAVIS_BUILD_NUMBER path

--- a/.travis.yml
+++ b/.travis.yml
@@ -81,5 +81,5 @@ jobs:
 #               - aws s3 rm --recursive s3://lf-travis-shared-storage/$TRAVIS_BUILD_NUMBER # clean up after ourselves
         
 after_success:
-  - zip -r -q artifacts/artifacts.zip *
+  - zip -r -q ~/$TRAVIS_BUILD_NUMBER/artifacts.zip *
   - aws s3 sync ~/$TRAVIS_BUILD_NUMBER s3://lf-travis-shared-storage/$TRAVIS_BUILD_NUMBER
