--- a/.travis.yml
+++ b/.travis.yml
@@ -70,5 +70,7 @@ jobs:
 #               - aws s3 rm --recursive s3://lf-travis-shared-storage/$TRAVIS_BUILD_NUMBER # clean up after ourselves
         
 after_success:
-  - zip -r -q ~/$TRAVIS_BUILD_NUMBER/$TIER/$TIER.zip ~/$TIER/*
+  - pwd
+  - zip -r -q ~/$TRAVIS_BUILD_NUMBER/$TIER/$TIER.zip ./$TIER/*
+  - ls -al
   - aws s3 sync ~/$TRAVIS_BUILD_NUMBER/$TIER s3://lf-travis-shared-storage/$TRAVIS_BUILD_NUMBER/$TIER
