--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,5 @@ jobs:
 #               - aws s3 rm --recursive s3://lf-travis-shared-storage/$TRAVIS_BUILD_NUMBER # clean up after ourselves
         
 after_success:
-  - pwd
-  - zip -r -q ~/$TRAVIS_BUILD_NUMBER/$TIER/$TIER.zip ./$TIER/*
-  - ls -al
+  - zip -r -q ~/$TRAVIS_BUILD_NUMBER/$TIER/$TIER.zip /home/travis/build/pravash-upreti/serverless-pipeline/$TIER/*
   - aws s3 sync ~/$TRAVIS_BUILD_NUMBER/$TIER s3://lf-travis-shared-storage/$TRAVIS_BUILD_NUMBER/$TIER
